# smart-todo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
todo/: __init__.py  cli.py  db.py  models.py  utils.py
