[project]
name = "smart-todo"
version = "0.1.0"
description = "A simple TODO CLI (starter codebase)"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "rapidfuzz>=3.9",
  "matplotlib>=3.9",
  "PyYAML>=6.0"
]

[project.scripts]
todo = "todo.cli:app"
